--- a/unpackaged/main/default/classes/SOM_AutomatedEmailWithProcess_Test.cls
+++ b/unpackaged/main/default/classes/SOM_AutomatedEmailWithProcess_Test.cls
@@ -2,15 +2,12 @@
 public with sharing class SOM_AutomatedEmailWithProcess_Test {
     @IsTest (seeAllData = true)
    static void test() {
-       
-          Test.startTest();
-
-          SOM_AutomatedEmailWithProcessEXBatch scheduler = new SOM_AutomatedEmailWithProcessEXBatch();
-
-          scheduler.execute(null);
-
-          System.assertEquals(1,1); 
-    	  Test.stopTest();
+    Test.startTest();
+        String chron = '0 0 * * * ?';        
+        String jobid = System.schedule('SOM_AutomatedEmailWithProcessEXBatch', '0 0 * * * ?', new SOM_AutomatedEmailWithProcessEXBatch() );
+        CronTrigger ct = [SELECT id , CronExpression FROM CronTrigger WHERE id = :jobId];
+        System.assertEquals(chron,ct.CronExpression); 
+    Test.stopTest();
    }
     
 }
