first deployment check

--- a/force-app/main/default/classes/HelloWorldTest.cls
+++ b/force-app/main/default/classes/HelloWorldTest.cls
@@ -2,6 +2,6 @@
 private class HelloWorldTest {
     @isTest static void testSayHello() {
         String result = HelloWorld.sayHello();
-        System.assertEquals('Bonjour', result, 'La méthode sayHello doit retourner "Bonjour Ulrich"');
+        System.assertEquals('Bonjour Ulrich', result, 'La méthode sayHello doit retourner "Bonjour Ulrich"');
     }
 }
