--- a/force-app/main/default/classes/HelloWorld.cls
+++ b/force-app/main/default/classes/HelloWorld.cls
@@ -1,5 +1,5 @@
 public class HelloWorld {
     public static String sayHello() {
-        return 'Bonjour Ulrich! Comment vas-tu?'; 
+        return 'Bonjour Ulrich! Comment vas-tu Ulrich?'; 
     }
 }
